# compile-schema

./: CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml
src/: main.rs
