[package]
name = "compile-schema"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
hex = "0.4.3"
refinery = { version = "0.9.0", features = ["rusqlite"] }
rusqlite = { version = "0.37.0", features = ["functions"] }
sha2 = "0.10.9"
sqlformat = "0.5.0"
